--- a/css/_grid.scss
+++ b/css/_grid.scss
@@ -22,6 +22,10 @@
     margin-left: auto;
 }
 
+.container {
+    max-width: 1320px;
+}
+
 .row {
     --gutter-x: 1.2rem; //12px
     --gutter-y: 0;
