--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -1,8 +1,5 @@
 @mixin xxl {
-    @media (min-width: 1400px) {
-        @content;
-    }
-    @media (min-width: 1400px) {
+    @media (max-width: 1400px) {
         @content;
     }
 }
